--- a/src/app/Layout/Components/header/elements/user-box/user-box.component.html
+++ b/src/app/Layout/Components/header/elements/user-box/user-box.component.html
@@ -41,7 +41,7 @@
               </li>
            
             <li class="nav-item text-white">
-                <a class="nav-link text-white ntfy"  role="button" (click)="logoutUser()"> <i class="fas fa-power-off mr-2"></i></a>
+                <a class="nav-link text-white ntfy"  role="button" > <i class="fas fa-power-off mr-2"></i></a>
               </li>
              </ul>
       </div>
