--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -2,44 +2,31 @@
 
   <div class="container">
 
-      <div class="row rowbackground">
+      <div class="row border">
 
-        <div class="col"></div>
+        <div class="col-md-6">
+          <img src="../../assets/images/login image.jpg" height="400" class="logImg">
+        </div>
 
-        <div class="col colstyle">
-
-
-           
-
+        <div class="col-md-6 colstyle">
               <h1 class="text-center">User Login</h1>
               <hr>
               <form>
-                      <div class="form-group">
-                              <label for="exampleInputEmail1" class="label">User Name</label>
-                              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Username" name="username"  [(ngModel)]="logindata.username">
-
-                            </div>
-                            <div class="form-group">
-                                  <label for="exampleInputpassword" class="label">Password</label>
-                                  <input type="password" class="form-control" id="exampleInputpassword" aria-describedby="emailHelp" placeholder="Enter Password" name="password"  [(ngModel)]="logindata.password">
-  
-                                </div>
-
-                                <div >
-                                      <button type="button" class="btn btn-success  mr-2" (click)="login()" routerLinkActive="router-link-active" >Submit</button>
-
-                                      <button type="button" class="btn btn-primary   float-right"[routerLink]="['/registration']" >Register</button>
-                                </div>
+                <div class="form-group">
+                  <label for="exampleInputEmail1" class="label">User Name</label>
+                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Username" name="username"  [(ngModel)]="logindata.username">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputpassword" class="label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputpassword" aria-describedby="emailHelp" placeholder="Enter Password" name="password"  [(ngModel)]="logindata.password">
+                </div>
+                <div >
+                  <button type="button" class="btn btn-success  mr-2" (click)="login()" routerLinkActive="router-link-active" >Submit</button>
+                  <button type="button" class="btn btn-primary   float-right"[routerLink]="['/registration']" >Register</button>
+                 </div>
               </form>
-
-
-
-             
-        
+        </div>
       </div>
-
-      </div>
-
   </div>
 
 
