--- a/src/app/Layout/Components/sidebar/sidebar.component.html
+++ b/src/app/Layout/Components/sidebar/sidebar.component.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" routerLink="/elements/photos" >Photos</a>
                     <a class="nav-link" routerLink="/elements/freindrequests">Requests<span class="badge badge-info">{{Arraylength}}</span></a>
                     <a class="nav-link " routerLink="/elements/posting" tabindex="-1" aria-disabled="true">Add Post</a>
-                    <a class="nav-link " href="" tabindex="-1" aria-disabled="true">About</a>
+                    <a class="nav-link " routerLink="elements/forgetpassword" tabindex="-1" aria-disabled="true">About</a>
                   </nav>
            
               <!-- <ngb-panel id="dashboardsMenu">
