--- a/src/app/DemoPages/Elements/homepage/homepage.component.html
+++ b/src/app/DemoPages/Elements/homepage/homepage.component.html
@@ -68,7 +68,7 @@
       </div>
       <div class="col">
 
-        <div class="card card1" *ngFor="let hero of array2| paginate: {itemsPerPage:1, currentPage:u}">
+        <!-- <div class="card card1" *ngFor="let hero of array2| paginate: {itemsPerPage:1, currentPage:u}">
           <div class="card-body">
             <div class=""><img src="{{hero.file}}" class="rounded" width="200px" height="200px"> </div>
 
@@ -78,7 +78,7 @@
 
           </div>
         </div>
-        <pagination-controls (pageChange)="u=$event"></pagination-controls>
+        <pagination-controls (pageChange)="u=$event"></pagination-controls> -->
       </div>
     </div>
   </div>
