--- a/src/app/Layout/base-layout/base-layout.component.html
+++ b/src/app/Layout/base-layout/base-layout.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div >
 <div [ngClass]="{
 'closed-sidebar' : globals.toggleSidebar,
 'closed-sidebar-md' : globals.toggleSidebarMobile,
