--- a/src/app/Layout/Components/sidebar/sidebar.component.html
+++ b/src/app/Layout/Components/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" routerLink="/elements/photos" ><i class="far fa-images fa-fw"></i>Gallery</a>
                     <a class="nav-link" routerLink="/elements/freindrequests"><i class="fas fa-handshake fa-fw"></i>Invitations<span class="badge badge-info float-right mt-1">{{Arraylength}}</span></a>
                     <a class="nav-link " routerLink="/elements/posting" tabindex="-1" aria-disabled="true"><i class="fas fa-pen-nib fa-fw"></i>Add Post</a>
-                    <a class="nav-link " routerLink="elements/forgetpassword" tabindex="-1" aria-disabled="true"><i class="far fa-address-card fa-fw"></i>About</a>
+                    <a class="nav-link " routerLink="/elements/messenger" tabindex="-1" aria-disabled="true"><i class="far fa-address-card fa-fw"></i>About</a>
                   </nav>
                
            
