--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,14 +1,5 @@
-<mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile>1</mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list>
 
-
-
-
-<!-- <div class="container-fluid">
+ <div class="container-fluid">
   <div class="container">
     <div class="row main">
       <div class="col-md-6">
@@ -40,10 +31,10 @@
                     routerLinkActive="router-link-active">Submit</button>
                   <button type="button" class="btn btn-primary" [routerLink]="['/registration']">Register</button>
                 </div>
-                <div class="d-flex justify-content-center mt-5">
+                <!-- <div class="d-flex justify-content-center mt-5">
                   <a [routerLink]="['/forgetpassword']" class="text-primary forgetbtn text-center"
                     (click)="resetpassword()">Forgot Password</a>
-                </div>
+                </div> -->
               </form>
             </div>
           </div>
@@ -51,7 +42,7 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 <!-- input tags -->
  <!-- <div class="form-group">
                   <label for="exampleInputEmail1" class="label">User Name</label>
